--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["./src/**/*", "types/index.d.ts"],
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -17,9 +18,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
-  },
-  "include": [
-    "src"
-  ]
+    "jsx": "react",
+    "noImplicitAny": true,
+    "baseUrl": "src"
+  }
 }
